# simple_cnn

./: .gitignore  README.md  pyproject.toml
notebooks/: 1-create_image_df.ipynb
scripts/: evaluate.py  generate_labels.py  generate_splits.py  predict.py
src/: __init__.py  config.py  data_augmentation.py  gpu_utils.py  image_utils.py  main.py  metrics.py  model.py  trainer.py
